update css and js

--- a/asc_socialmedia.css
+++ b/asc_socialmedia.css
@@ -1,3 +1,8 @@
+#block-asc_social_media_d6-asc_socialmedia_sharing {
+	width: 100%;
+	clear: both;
+}
+
 .block-asc-socialmedia {
   float: right;
   font-size: 0;
