--- a/asc_socialmedia.css
+++ b/asc_socialmedia.css
@@ -1,6 +1,7 @@
 #block-asc_social_media_d6-asc_socialmedia_sharing {
 	width: 100%;
-	clear: both;
+	height: 25px;
+	padding-bottom: 100px;
 }
 
 #block-asc_social_media_d6-asc_socialmedia_sharing .content{
